kubernetes/argo-cd/projects/aws/production-hm/label-studio/environments/production/kubernetes-manifests/hm-label-studio-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-label-studio-ingress
  namespace: production-hm-label-studio
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: label-studio.hongbomiao.com
  labels:
    app.kubernetes.io/name: label-studio
    app.kubernetes.io/part-of: production-hm-label-studio
spec:
  rules:
    - host: label-studio.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-label-studio-ls-app
                port:
                  number: 80
  tls:
    - hosts:
        - label-studio.hongbomiao.com
      secretName: hm-label-studio-certificate
